--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "license": "ISC",
     "dependencies": {
         "@babel/cli": "^7.2.3",
-        "@babel/core": "^7.2.2",
+        "@babel/core": "^7.3.3",
         "@babel/node": "^7.2.2",
         "@babel/polyfill": "^7.0.0",
         "@babel/preset-env": "^7.2.3",
@@ -36,10 +36,10 @@
         "@material/shape": "^0.41.0",
         "@material/textfield": "^0.41.0",
         "autoprefixer": "^9.3.1",
-        "axios": "^0.18.0",
         "babel-loader": "^8.0.4",
-        "bcrypt": "^3.0.2",
+        "bcrypt": "^3.0.4",
         "body-parser": "^1.18.3",
+        "brain.js": "^1.6.1",
         "bufferutil": "^4.0.1",
         "chartist-plugin-axistitle": "0.0.4",
         "chartist-plugin-pointlabels": "0.0.6",
@@ -47,7 +47,7 @@
         "clean-webpack-plugin": "^1.0.1",
         "concurrently": "^4.1.0",
         "connect-mongodb-session": "^2.1.1",
-        "cookie-parser": "^1.4.3",
+        "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "css-loader": "^1.0.1",
         "csurf": "^1.9.0",
@@ -63,23 +63,19 @@
         "file-loader": "^2.0.0",
         "flatpickr": "^4.5.2",
         "html-webpack-plugin": "^3.2.0",
-        "iconfont-webpack-plugin": "^3.0.1",
         "jest": "^24.1.0",
-        "lodash": "^4.17.11",
         "material-components-web": "^0.40.1",
         "maybe": "0.0.2",
-        "maybes": "^0.2.3",
         "mini-css-extract-plugin": "^0.5.0",
-        "moment": "^2.22.2",
+        "moment": "^2.24.0",
         "mongodb": "^3.1.12",
-        "mongoose": "^5.4.11",
+        "mongoose": "^5.4.14",
         "mongoose-auto-increment-reworked": "^1.2.1",
         "morgan": "^1.9.1",
-        "moxios": "^0.4.0",
         "n": "^2.1.12",
         "node-sass": "^4.10.0",
-        "nodemon": "^1.18.7",
-        "npm": "^6.4.1",
+        "nodemon": "^1.18.10",
+        "npm": "^6.8.0",
         "nunjucks": "^3.1.4",
         "postcss-loader": "^3.0.0",
         "ramda": "^0.26.1",
@@ -88,21 +84,22 @@
         "rxjs-compat": "^6.2.2",
         "sass-loader": "^7.1.0",
         "serve-favicon": "^2.5.0",
+        "stemmer": "^1.0.3",
+        "string-similarity": "^3.0.0",
         "style-loader": "^0.23.1",
         "supertest": "^3.4.2",
         "terser": "^3.14.1",
-        "typed.js": "^2.0.9",
         "url-loader": "^1.1.2",
         "utf-8-validate": "^5.0.2",
         "uuid": "^3.3.2",
-        "vue": "^2.5.17",
+        "vue": "^2.6.6",
         "vue-chartist": "^2.2.0",
         "vuex": "^3.0.1",
-        "webpack": "^4.29.0",
+        "webpack": "^4.29.5",
         "webpack-bundle-tracker": "^0.4.2-beta",
-        "webpack-cli": "^3.2.1",
-        "webpack-dev-middleware": "^3.4.0",
+        "webpack-cli": "^3.2.3",
+        "webpack-dev-middleware": "^3.6.0",
         "webpack-dev-server": "^3.1.14",
-        "ws": "^6.1.3"
+        "ws": "^6.1.4"
     }
 }
