--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "start": "node src/server/index.js",
         "server": "nodemon src/server/index.js",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
-
         "test_network": "node src/server/neural/test.action.search.js"
     },
     "keywords": [],
@@ -40,11 +39,13 @@
         "autoprefixer": "^9.3.1",
         "babel-eslint": "^10.0.1",
         "babel-loader": "^8.0.4",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-preset-airbnb": "^3.2.0",
         "bcrypt": "^3.0.4",
         "body-parser": "^1.18.3",
         "brain.js": "^1.6.1",
         "bufferutil": "^4.0.1",
+        "chartist": "^0.11.0",
         "chartist-plugin-axistitle": "0.0.4",
         "chartist-plugin-pointlabels": "0.0.6",
         "chartist-plugin-tooltips": "0.0.17",
@@ -78,7 +79,7 @@
         "mini-css-extract-plugin": "^0.5.0",
         "moment": "^2.24.0",
         "mongodb": "^3.1.12",
-        "mongoose": "^5.4.14",
+        "mongoose": "^5.4.19",
         "mongoose-auto-increment-reworked": "^1.2.1",
         "morgan": "^1.9.1",
         "n": "^2.1.12",
