--- a/.eslincrc.json
+++ b/.eslincrc.json
@@ -1,6 +1,5 @@
 {
     "parser": "babel-eslint",
-    "extends": ["airbnb"],
     "env": {
         "browser": true,
         "node": true
@@ -8,6 +7,7 @@
     "rules": {
         "no-console": "off",
         "comma-dangle": "off",
-        "react/jsx-filename-extension": "off"
+        "react/jsx-filename-extension": "off",
+        "semi": ["warn", "never"]
     }
 }
