--- a/package.json
+++ b/package.json
@@ -25,23 +25,23 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@babel/cli": "^7.2.3",
-        "@babel/core": "^7.3.3",
+        "@babel/cli": "^7.4.3",
+        "@babel/core": "^7.4.3",
         "@babel/node": "^7.2.2",
-        "@babel/polyfill": "^7.0.0",
-        "@babel/preset-env": "^7.2.3",
+        "@babel/polyfill": "^7.4.3",
+        "@babel/preset-env": "^7.4.3",
         "@material/auto-init": "^0.41.0",
         "@material/form-field": "^0.41.0",
         "@material/notched-outline": "^0.41.0",
         "@material/select": "^0.41.0",
         "@material/shape": "^0.41.0",
         "@material/textfield": "^0.41.0",
-        "autoprefixer": "^9.3.1",
+        "autoprefixer": "^9.5.1",
         "babel-eslint": "^10.0.1",
         "babel-loader": "^8.0.4",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
-        "babel-preset-airbnb": "^3.2.0",
-        "bcrypt": "^3.0.4",
+        "babel-preset-airbnb": "^3.2.1",
+        "bcrypt": "^3.0.5",
         "body-parser": "^1.18.3",
         "brain.js": "^1.6.1",
         "bufferutil": "^4.0.1",
@@ -59,35 +59,36 @@
         "csv": "^5.0.0",
         "debug": "^4.1.0",
         "dev-server": "^0.1.0",
-        "eslint": "^5.15.0",
+        "eslint": "^5.16.0",
         "eslint-config-airbnb": "^17.1.0",
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.16.4",
         "express-generator": "^4.16.0",
-        "express-session": "^1.15.6",
+        "express-session": "^1.16.1",
         "express-validator": "^5.3.0",
         "express-ws": "^4.0.0",
         "extract-loader": "^3.0.0",
         "file-loader": "^2.0.0",
-        "flatpickr": "^4.5.2",
+        "flatpickr": "^4.5.7",
         "html-webpack-plugin": "^3.2.0",
-        "jest": "^24.1.0",
+        "jest": "^24.7.1",
         "material-components-web": "^0.40.1",
         "maybe": "0.0.2",
         "mini-css-extract-plugin": "^0.5.0",
         "moment": "^2.24.0",
-        "mongodb": "^3.1.12",
-        "mongoose": "^5.4.19",
+        "mongodb": "^3.2.3",
+        "mongoose": "^5.5.1",
         "mongoose-auto-increment-reworked": "^1.2.1",
+        "mongoose-plugin-autoinc": "^1.1.9",
         "morgan": "^1.9.1",
         "n": "^2.1.12",
-        "node-sass": "^4.10.0",
-        "nodemon": "^1.18.10",
-        "npm": "^6.8.0",
-        "nunjucks": "^3.1.4",
+        "node-sass": "^4.11.0",
+        "nodemon": "^1.18.11",
+        "nunjucks": "^3.2.0",
         "postcss-loader": "^3.0.0",
+        "pratica": "^1.4.14",
         "ramda": "^0.26.1",
         "ramda-fantasy": "^0.8.0",
         "rxjs": "^6.3.3",
@@ -98,18 +99,19 @@
         "string-similarity": "^3.0.0",
         "style-loader": "^0.23.1",
         "supertest": "^3.4.2",
-        "terser": "^3.14.1",
+        "tar": "^4.4.8",
+        "terser": "^3.17.0",
         "url-loader": "^1.1.2",
         "utf-8-validate": "^5.0.2",
         "uuid": "^3.3.2",
-        "vue": "^2.6.6",
+        "vue": "^2.6.10",
         "vue-chartist": "^2.2.0",
         "vuex": "^3.0.1",
-        "webpack": "^4.29.5",
+        "webpack": "^4.30.0",
         "webpack-bundle-tracker": "^0.4.2-beta",
-        "webpack-cli": "^3.2.3",
-        "webpack-dev-middleware": "^3.6.0",
-        "webpack-dev-server": "^3.1.14",
-        "ws": "^6.1.4"
+        "webpack-cli": "^3.3.0",
+        "webpack-dev-middleware": "^3.6.2",
+        "webpack-dev-server": "^3.3.1",
+        "ws": "^6.2.1"
     }
 }
