module_pattern - WIP - Implement Client & Domain data models.  Refactor models to module pattern & use auto-imports so you can still just import the model module.  Use service pattern to create composable app-level services (monadic pipelines).

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,14 @@
     "browser": true,
     "node": true
   },
+  "extends": ["eslint:recommended"],
   "rules": {
     "no-console": "off",
     "comma-dangle": "off",
     "react/jsx-filename-extension": "off",
-    "semi": ["warn", "never"]
+    "semi": [
+      "warn",
+      "never"
+    ]
   }
 }
