--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "dev-server": "^0.1.0",
         "eslint": "^5.16.0",
         "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-google": "^0.12.0",
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-react": "^7.12.4",
@@ -72,6 +73,7 @@
         "extract-loader": "^3.0.0",
         "file-loader": "^2.0.0",
         "flatpickr": "^4.5.7",
+        "glob": "^7.1.3",
         "html-webpack-plugin": "^3.2.0",
         "jest": "^24.7.1",
         "material-components-web": "^0.40.1",
